<resources>
    <string name="app_name">StartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_courses">My Courses</string>
    <string name="my_account">My Account</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
</resources>
