<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_my_courses"
        android:icon="@drawable/my_course"
        android:title="@string/my_courses" />

    <item
        android:id="@+id/navigation_my_account"
        android:icon="@drawable/my_account"
        android:title="@string/my_account" />
    <item
        android:id="@+id/navigation_arama"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_my_cart"
        android:icon="@drawable/my_cart"
        android:title="@string/cart" />

</menu>
