<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marki.startactivity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_course"
        android:name="com.marki.startactivity.ui.dashboard.DashboardFragment"
        android:label="@string/my_courses"
        tools:layout="@layout/fragment_my_course" />

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="com.marki.startactivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my_account" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.marki.startactivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_my_cart"
        android:name="com.marki.startactivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />
</navigation>